--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- SECCION PRODUCTOS -->
 
       <div class="seccionProductos">
-        <img src="images/velaShape.png" alt="background-image" id="fotoProductos">
+        <img src="images/Velashape.png" alt="background-image" id="fotoProductos">
         <div class="textoProductos">
           <h3>Innovadores</h3>
           <div class="listItems">
