--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <h3>En day spa nos preocupamos por contar con
              los mejores y mas innovadores tratamientos
              para que luzcas el cuerpo que siempre soñaste.</h3>
-          <img src="images/logoPortada.png" alt="Logo de day spa" id="logoPortada">
+          <img src="images/LogoPortada.png" alt="Logo de day spa" id="logoPortada">
           <div class="buttonsSeccion1">
             <button type="button" name="button1Seccion1" class="button" id="button1">
               Tratamientos
