Mas cambios menores

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       <div class="header">
         <img src="images/logo.png" alt="Day spa tecnologia en estetica">
         <div class="links">
-          <a href="#">Home</a>
-          <a href="#">Comprar</a>
-          <a href="#">El centro</a>
-          <a href="#">Contacto</a>
+          <a href="#Home">Home</a>
+          <a href="#Comprar">Comprar</a>
+          <a href="#ElCentro">El centro</a>
+          <a href="#Contacto">Contacto</a>
         </div>
       </div>
 
       <!-- PORTADA -->
 
-      <div class="portada">
+      <div class="portada" >
         <img src="images/orchid_stone2.png" alt="Unas piedras, de fondo" class="piedras">
         <div class="textoPortada">
           <h3>Cuerpo y alma en armonia <br>
@@ -38,7 +38,7 @@
 
       <!-- SECCION 1 -->
 
-      <div class="seccion1">
+      <div class="seccion1" id="Home">
         <img src="images/WomanSeccion1.png" alt="another background-image" class="mujer">
         <div class="textoSeccion1">
           <h3>En day spa nos preocupamos por contar con
@@ -46,19 +46,23 @@
              para que luzcas el cuerpo que siempre soñaste.</h3>
           <img src="images/LogoPortada.png" alt="Logo de day spa" id="logoPortada">
           <div class="buttonsSeccion1">
-            <button type="button" name="button1Seccion1" class="button" id="button1">
-              Tratamientos
-            </button>
-            <button type="button" name="button2Seccion1" class="button" id="button2">
-              Contacto
-            </button>
+            <a href="#Comprar">
+              <button type="button" name="button1Seccion1" class="button" id="button1">
+                Tratamientos
+              </button>
+            </a>
+            <a href="#Contacto">
+              <button type="button" name="button2Seccion1" class="button" id="button2">
+                Contacto
+              </button>
+            </a>
           </div>
         </div>
       </div>
 
       <!-- SECCION PRODUCTOS -->
 
-      <div class="seccionProductos">
+      <div class="seccionProductos" id="Comprar">
         <img src="images/Velashape.png" alt="background-image" id="fotoProductos">
         <div class="textoProductos">
           <h3>Innovadores</h3>
@@ -119,7 +123,7 @@
 
       </div>
 
-      <div class="contacto contactoResponsive">
+      <div class="contacto contactoResponsive" id="Contacto">
         <div class="contactoInfo">
           <h1>Contacto</h1>
           <h4>En nuestras redes sociales te responderemos de inmediato</h4>
